[css] prevent horizontal scrollbar on 100vw code snippets

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,9 @@ $note_background: #eeeeee !default;
 
 body {
     line-height: 1.35em;
+    // 100vw code blocks include the vertical scrollbar
+    // which would cause a horizontal scrollbar to appear :(
+    overflow-x: hidden;
 }
 
 .content,
@@ -584,7 +587,7 @@ h6 {
         border-left: none;
         border-right: none;
         padding-left: 3rem;
-        padding-right: 1rem;
+        padding-right: 2rem;
         max-width: initial;
         width: 100vw;
     }
